# local-video-production-pipeline

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
.claude/: launch.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: .env.example  alembic.ini  pyproject.toml  run_server.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 182a492d4e63_initial_schema.py  7e48a7c0ef51_creator_os_brands_pipeline_runs_.py  9b6ae3ffca66_brand_engine_preferences.py  ff13f0dcce8f_workflow_management_flags.py
backend/app/: main.py
backend/app/core/: config.py  crud_router.py  db.py  events.py  files.py  registry.py  repository.py  schemas.py
backend/scripts/: accept_run.py  wf_sweep.py
backend/tests/: conftest.py  test_agents.py  test_analytics.py  test_assets.py  test_brands.py  test_chat.py  test_client_node_errors.py  test_comfyui.py  test_convert.py  test_core.py  test_mcp.py  test_model_manager.py  test_ollama_fallback.py  test_pipeline.py  test_plugins.py  test_projects.py  test_prompts.py  test_publishing.py  test_recovery.py  test_research.py  test_scripts.py  test_seo.py  test_settings.py  test_setup.py  test_storyboard.py  test_strategy_knowledge.py  test_subtitles.py  test_system_brand_prefs.py  test_templates.py  test_thumbnail.py  test_timeline.py  test_voice.py  test_workflow_intelligence.py  test_workflow_management.py
(+153 files in other folders)
