[package]
name = "lvpp-desktop"
version = "1.2.1"
description = "LVPP Studio desktop shell"
edition = "2021"

[lib]
name = "lvpp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
